# openspindlenet

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml  python-package.yml
data/: ieeg_sample.txt
models/: spindle-detector-eeg.onnx
openspindlenet/: __init__.py  cli.py  evaluator.py  inference.py  visualization.py
openspindlenet/data/: __init__.py  eeg_sample.txt
openspindlenet/models/: __init__.py  spindle-detector-ieeg.onnx
tests/: conftest.py  test_cli.py  test_core.py
