[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openspindlenet"
version = "0.1.0"
description = "Open-source tool for sleep spindle detection using neural networks"
readme = "README.md"
authors = [
    {name = "OpenSpindleNet Team", email = "author@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "onnxruntime>=1.7.0",
    "pywavelets>=1.1.0",
    "rich>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/CaptainTrojan/openspindlenet"

[project.scripts]
spindle-detect = "openspindlenet.cli:main"

[tool.setuptools]
packages = ["openspindlenet"]
include-package-data = true

[tool.setuptools.package-data]
openspindlenet = [
    "models/*.onnx",
    "data/*.txt",
]
